@@ -1,7 +1,10 @@
-obj-m+=whdriver-3v20.o
- 
-all:
-	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) modules
-clean:
-	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) clean
+# Makefile
+obj-m += whdriver-3v20.o
+KDIR ?= /lib/modules/$(shell uname -r)/build
+PWD  := $(shell pwd)
 
+all:
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
+
+clean:
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
