@@ -1,2 +1,2 @@
-gcc whpicprog-3v20.c -o whpicprog-3v20 -march=armv7-a -I/opt/vc/include/ -L/opt/vc/lib -lbcm_host 
+gcc whpicprog-3v20.c -o whpicprog-3v20 -march=armv8-a -I/opt/vc/include/ -L/opt/vc/lib -lbcm_host 
 
